@@ -3,7 +3,7 @@ using System.Diagnostics;
 
 class Test
 {
-	public static void Main(string[] args)
+	public static void Main()
 	{
 		foreach (Process p in Process.GetProcesses())
 		{
