@@ -1,7 +1,9 @@
 On-the-Fly .NET Compiler Project Changelog:
 
 2.0.2 (-)
-[~] CompilerSettings creation moved to CompilerSettingsHelper class
+[+] New options are added to XmlConfiguration: generate executable, generate dll, generate in memory
+
+[~] CompilerSettings creation moved to CompilerSettingsParser class
 
 [-] No more ParameterContainer as proxy class for storing and accessing named properties
 
